# Google-Workspace-Agent

./: .dockerignore  .gitignore  API.md  Dockerfile  LICENSE  README.md  UI.md  UI_publication.md  docker-compose.yml  entrypoint.sh  example.env  google_search_tool.py  pyproject.toml  requirements.txt  search_worker.py  storage.db  test_end_to_end.ipynb
prompts/: core.py  google_search_worker.yml
publication/: publication-module3.md  publication.md
src/agents/: setup.py  utils.py
src/agents/calendar/: schemas.py  tool_google.py  worker.py
src/api/: auth.py  chat_router.py  core.py  depends.py  user_router.py  validations.py
src/evaluation_notebooks/: orchestrator_guardrails.ipynb  orchestrator_performance.ipynb  safety_evaluation.ipynb
src/google_service/: consent_flow.py  core.py  models.py  storage.py
src/gradio_ui/: api_client.py  chat_interface.py  google_auth.py  main.py  user_management.py
src/prompts/: calendar_worker.yml  contacts_worker.yml  core.py  date_worker.yml  email_worker.yml  google_search_worker.yml  orchestrator_input.yml  orchestrator_response.yml  orchestrator_verifier.yml
src/streamlit_ui/: consent.py  main.py  oauth.py
src/test_notebooks/: calendar_worker_test.ipynb  contacts_worker_test.ipynb  date_worker_test.ipynb  emails_worker_test.ipynb  google_search_test.ipynb  google_user_example.ipynb  orchestrator_test.ipynb  prompt_template_example.ipynb  types_evaluations.ipynb
src/utils/: config.py  exceptions.py  logger.py
test/: conftest.py
test/agents/: conftest.py  test_checkpointer.py  test_orchestration_behavior.py  test_orchestration_memory.py  test_orchestration_planning.py  test_planning.py
test/api/: chat_endpoint.py  conftest.py  history_endpoint.py
test/google_service/: test_storage.py  test_user_service.py
test/prompts/: conftest.py  test_core.py
(+30 files in other folders)
