
[tool.poetry]
name = "google-workspace-agent"
version = "0.1.0"
description = "RAG implementation using LangGraph"
authors = ["MAQuesada <malejandroquesada@gmail.com>"]
readme = "README.md"


packages = [
    { include = "prompts", from = "src" },
    { include = "agents", from = "src" },
    { include = "google_service", from = "src" },
    { include = "utils", from = "src" },
    { include = "api", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain-core = ">=0.3.63,<0.4.0"
langchain = "^0.3.25"
langchain-openai = ">=0.3.19,<0.4.0"
pydantic = ">=2.11.5,<3.0.0"
python-dotenv = "^1.1.0"
langgraph = "^0.4.8"
psycopg-pool = "^3.2.6"
langgraph-checkpoint-postgres = "^2.0.21"
psycopg = { extras = ["binary"], version = "^3.2.9" }
langchain-community = "^0.3.25"
openai = "^1.85.0"
langchain-experimental = "^0.3.4"
google-auth = "^2.40.3"
google-api-python-client = "^2.174.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"
pytz = "^2025.2"
types-pytz = "^2025.2.0.20250516"
asgiref = "^3.9.1"
ragas = "^0.3.1"
pillow = "^11.3.0"
rapidfuzz = "^3.13.0"
google-search-results = "^2.4.2"
python-jose = "^3.5.0"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
beautifulsoup4 = "^4.13.5"
#guardrails-ai = "^0.6.6"
backoff = "^2.2.1"
apscheduler = "^3.11.0"
cryptography = "^45.0.7"
litellm = "^1.76.1"
streamlit = "^1.49.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
notebook = "^7.4.3"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"


[[tool.mypy.overrides]]
module = ["qdrant_client.*", "pytz.*"]
ignore_missing_imports = true
